add public/img, update index adn main.handlebars

--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./public/custom.css"/>
+  <link rel="stylesheet" href="custom.css"/>
   <title>NodeTogether - Emergency Motivation</title>
+  <style>
+    body{
+      background-image: url('img/{{image}}.jpg');
+      background-size: cover;
+    }
+  </style>
 </head>
 <body>
   <header>
